ipc/ipdl/test/ipdl/error/PLazySendSync.ipdl
//error: non-async message `Message' cannot specify [LazySend]

[ChildProc=any]
sync protocol PLazySendSync {
child:
    [LazySend] sync Message() returns (bool ok);
};
